--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Super_Puissance4_LO_NEGRO.jar
+dist.jar=${dist.dir}/SP4_console_LO_NEGRO.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Super_Puissance4_LO_NEGRO
+dist.jlink.output=${dist.jlink.dir}/SP4_console_LO_NEGRO
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Super_Puissance4_LO_NEGRO
+jlink.launcher.name=SP4_console_LO_NEGRO
 main.class=super_puissance4_lo_negro.Super_Puissance4_LO_NEGRO
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
